redesign: add manager and individual python modules similar to xoRET

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,9 @@
         <![endif]-->
 		{% block content %}
 		{% endblock content %}
+        
+		{% block role_content %}
+		{% endblock role_content %}
         <nav class="navbar navbar-default navbar-fixed-bottom">
           <div class="container-fluid">
             <div class="navbar-header">
